module(name = "bzlmod_example")

# From https://registry.bazel.build/
bazel_dep(name = "aspect_rules_js",  version = "1.17.0")
bazel_dep(name = "aspect_rules_swc", version = "0.21.3")
bazel_dep(name = "aspect_rules_ts",  version = "1.2.0")
bazel_dep(name = "bazel_skylib",     version = "1.3.0")

################################################################################
# rules_js
################################################################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

################################################################################
# rules_ts
################################################################################

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")
