load("@npm//:next/package_json.bzl", "bin")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//:__subpackages__"])

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "srcs",
    srcs = glob([
        "_posts/**",
        "components/**",
        "lib/**",
        "pages/**",
        "public/**",
        "styles/**",
        "types/**",
    ]) + [
        ".swcrc",
        "next-env.d.ts",
        "package.json",
        "tailwind.config.js",
        "tsconfig.json",
    ]
)

_BUILD_DEPS = [
    ":node_modules/@types",
    ":node_modules/classnames",
    ":node_modules/date-fns",
    ":node_modules/gray-matter",
    ":node_modules/next",
    ":node_modules/react",
    ":node_modules/react-dom",
    ":node_modules/remark",
    ":node_modules/remark-html",
    ":node_modules/typescript",
    ":node_modules/tailwindcss",
    ":node_modules/postcss",
    ":node_modules/autoprefixer",
]

bin.next(
    name = "build",
    args = ["build"],
    outs = [".next"],
    srcs = _BUILD_DEPS + [":srcs"],
)

bin.next_binary(
    name = "start",
    data = _BUILD_DEPS + [":srcs"],
)
